Complete professional UI transformation with custom logo - Upgrade RecipeCard with modern Instagram-style design - Transform FeaturedStories with Instagram-style story circles - Modernize BottomNavigation with glassmorphism effects - Integrate custom CookBook logo throughout the app - Update favicon and app icons - Implement professional shadows, gradients, and animations

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/cookbook-logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cookbook-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#FF8800" />
+    <meta name="theme-color" content="#f97316" />
     <meta
       name="description"
       content="CookBook - Your culinary community"
